--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.10.17",
     "@progress/kendo-drawing": "^1.17.2",
+    "@progress/kendo-licensing": "^1.3.5",
     "@progress/kendo-react-form": "^5.9.0",
     "@progress/kendo-react-grid": "^5.9.0",
     "@progress/kendo-react-pdf": "^5.9.0",
+    "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.2.1",
+    "axios": "^1.6.7",
+    "draft-js": "^0.11.7",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "formidable": "^2.1.1",
@@ -25,13 +28,17 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.40.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-syntax-highlighter": "^15.5.0",
     "react-timer-hook": "^3.0.5",
     "react-toastify": "^9.1.1",
+    "redux": "^5.0.1",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
